LoS, RGE_comm, gaia tech tree, misc fixes

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ DoctorDumpSDK/docs/html
 [Rr]elease_cc/
 [Rr]elease_cc_compatible/
 [Rr]elease_Voobly/
+[Rr]elease_Voobly_EF/
 [Rr]eleases/
 [Xx]64/
 [Xx]86/
